# industrial-model

./: CALCULATOR.md  GENERATED_CLIENT.md  GENERATOR.md  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
industrial_model/: __init__.py  constants.py  utils.py  view_client.py
industrial_model/calculator/: __init__.py  calculator.py  datapoints_retrieval.py  models.py
industrial_model/calculator/formula_expression/: _compiler.py  _evaluator.py  _runtime.py  _types.py  core.py  exceptions.py
industrial_model/cli/: __init__.py  auth.py  config.py  constants.py  definitions.py  generator.py  main.py
industrial_model/cli/templates/: __init__.j2  clients_facade.j2  models.j2  view_client.j2  view_filters.j2  view_init.j2  view_models.j2  view_specific_client.j2  view_types.j2
industrial_model/cognite_adapters/: __init__.py  aggregation_mapper.py  optimizer.py  query_mapper.py  query_result_mapper.py  search_mapper.py  view_mapper.py
industrial_model/engines/: _internal.py  async_engine.py  engine.py
industrial_model/models/: entities.py  schemas.py
industrial_model/queries/: __init__.py  builder.py  filter_types.py  models.py  parser.py
industrial_model/statements/: __init__.py
scripts/: build.sh  format.sh  lint.sh  publish.sh  test-integration.sh  test-unit.sh  test.sh
tests/: hubs.py  models.py  test_aggregation_mapper.py  test_async_engine.py  test_cli_auth.py  test_cli_generator.py  test_cli_main.py  test_engine_aggregate.py  test_engine_query.py  test_engine_search.py  test_engine_setup.py  test_expressions.py  test_model.py  test_models.py  test_paginated_result.py  test_query.py  test_query_mapper.py  test_query_parser.py  test_schema.py  test_statements.py  tests_adapter.py  tests_search.py
tests/calculator/: test_calculator.py  test_datapoints_retrieval.py  test_package_api.py
tests/calculator/formula_expression/: _support.py  conftest.py  test_compiler.py  test_edge_cases.py  test_evaluation.py  test_exceptions.py  test_large_datasets.py  test_public_api.py  test_representative_formulas.py  test_runtime.py  test_validation.py
