[project]
name = "industrial-model"
version = "1.6.3"
description = "Industrial Model ORM"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Lucas Alves", email = "lucasrosaalves@gmail.com" }]
dependencies = [
    "cognite-sdk>=8.7.0,<9",
    "pydantic>=2.11.4,<3",
    "pyyaml>=6.0.2,<7",
]
classifiers = [
    "Programming Language :: Python",
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Typing :: Typed",
]

[project.optional-dependencies]
cli = [
    "InquirerPy>=0.3.4,<0.4",
    "jinja2>=3.1.6,<4",
    "python-dotenv>=1.1.0,<2",
    "ruff>=0.11.8,<0.12",
    "typer>=0.19.1,<0.20",
]

[project.scripts]
industrial_model = "industrial_model.cli:main"

[build-system]
requires = ["hatchling >= 1.27"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["industrial_model"]

[project.urls]
Homepage = 'https://github.com/lucasrosaalves/industrial-model'
Source = 'https://github.com/lucasrosaalves/industrial-model'

[dependency-groups]
dev = [
    "mypy>=1.15.0,<1.16",
    "pytest>=8.3.5,<8.4",
    "python-dotenv>=1.1.0,<1.2",
    "ruff>=0.11.8,<0.11.10",
    "typer>=0.19.1,<0.20",
    "types-pyyaml>=6.0.12.20250402,<6.0.12.20250501",
]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
]
