[project]
name = "industrial-model"
version = "1.7.0"
description = "Industrial Model ORM"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Lucas Alves", email = "lucasrosaalves@gmail.com" }]
dependencies = [
    "cognite-sdk>=8.7.0,<9",
    "pydantic>=2.11.4,<3",
    "pyyaml>=6.0.2,<7",
]
classifiers = [
    "Programming Language :: Python",
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Typing :: Typed",
]

[project.optional-dependencies]
cli = [
    "InquirerPy>=0.3.4,<0.4",
    "jinja2>=3.1.6,<4",
    "python-dotenv>=1.2.2,<2",
    "ruff>=0.15.20,<0.16",
    "typer>=0.26.7,<0.27",
]

[project.scripts]
industrial_model = "industrial_model.cli:main"

[build-system]
requires = ["hatchling >= 1.27"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["industrial_model"]

[project.urls]
Homepage = 'https://github.com/lucasrosaalves/industrial-model'
Source = 'https://github.com/lucasrosaalves/industrial-model'

[dependency-groups]
dev = [
    "mypy>=1.20.2,<2",
    "pytest>=9.1.1,<10",
    "python-dotenv>=1.2.2,<2",
    "ruff>=0.15.20,<0.16",
    "typer>=0.26.7,<0.27",
    "types-pyyaml>=6.0.12.20260518,<7",
]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
markers = ["integration: tests that require live CDF credentials"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
]
